# JWT-Token-Auth-Django-Seed

./: cookiecutter.json  pyproject.toml  readme.md
backend/: pyproject.toml  settings.py  urls.py
backend/backend/: urls.py
backend/backend/backend/: settings.py
backend/users/: models.py  urls.py
backend/users/migrations/: 0001_initial.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/: .gitignore  manage.py  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/users/: models.py  serializers.py  urls.py  views.py
{{cookiecutter.project_slug}}/users/tests/: test_views.py  util.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_name}}/: asgi.py  settings.py  urls.py  wsgi.py
